# BloCrypt

./: CMakeLists.txt  README.md
include/: AES.hpp  KeyGen.hpp  MetaKey.hpp  utils.hpp
src/: AES.cpp  KeyGen.cpp  MetaKey.cpp  main.cpp
testfiles/: vcftest
tests/: TestMetaKeyIO.cpp
